# Graphics-Programming

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
Display/: Logger.cpp  Window.cpp  Window.h
Renderer/: Framebuffer.cpp  Framebuffer.h  MainRenderData.h  MainRenderer.cpp  MainRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
imports/include/glad/: glad.h
imports/src/: glad.c
include/glad/: glad.h
resource/Models/: Model.cpp  Model.h
shaders/: basic.frag  basic.vert
src/: glad.c
